--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -12,4 +12,21 @@ jobs:
           - name: Say Hello
             run: |
                 echo "Hello World!"
+                
+    now_it_is_job:
+        runs-on: ubuntu-20.04
+        steps:
+            - name: Now It is
+              run: |
+                date
+
+
+    directory_content_job:
+         runs-on: ubuntu-20.04
+         steps:
+             - name: Directory Content
+               run: |
+                ls -l
+ 
+                
     
